[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/ui/hud_layer.gd" type="Script" id=1]
[ext_resource path="res://ui/gfx/hud_rings.png" type="Texture" id=2]
[ext_resource path="res://ui/ui_default.tres" type="Theme" id=3]
[ext_resource path="res://ui/gfx/hud_time.png" type="Texture" id=4]
[ext_resource path="res://ui/gfx/hud_lives_sonic.png" type="Texture" id=5]
[ext_resource path="res://ui/gfx/hud_multiply_symbol.png" type="Texture" id=6]
[ext_resource path="res://ui/gfx/hud_score.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]

resource_name = "safe"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]

resource_name = "unsafe"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]

resource_name = "safe"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]

resource_name = "unsafe"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="hud_layer" type="CanvasLayer" index="0"]

layer = 32
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="rings_symbol" type="Sprite" parent="." index="0"]

position = Vector2( 8, 5 )
texture = ExtResource( 2 )
centered = false
hframes = 2
frame = 1
_sections_unfolded = [ "Animation" ]

[node name="rings_player" type="AnimationPlayer" parent="rings_symbol" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/safe = SubResource( 1 )
anims/unsafe = SubResource( 2 )
blend_times = [  ]

[node name="rings_count" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 104.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "XXX"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="time_symbol" type="Sprite" parent="." index="2"]

editor/display_folded = true
position = Vector2( 8, 24 )
texture = ExtResource( 4 )
centered = false
hframes = 2

[node name="time_player" type="AnimationPlayer" parent="time_symbol" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/safe = SubResource( 3 )
anims/unsafe = SubResource( 4 )
blend_times = [  ]

[node name="time_count" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 18.0
margin_right = 117.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "X:XX.XX"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lives_symbol" type="Sprite" parent="." index="4"]

editor/display_folded = true
position = Vector2( 8, 211 )
texture = ExtResource( 5 )
centered = false

[node name="multiplier_symbol" type="Sprite" parent="lives_symbol" index="0"]

position = Vector2( 25, 9 )
texture = ExtResource( 6 )

[node name="lives_count" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 207.0
margin_right = 80.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "XXX"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score_symbol" type="Sprite" parent="." index="6"]

position = Vector2( 8, 44 )
texture = ExtResource( 7 )
centered = false

[node name="score_count" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 38.0
margin_right = 104.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "XXXXXX"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


